<resources>
    <string name="app_name">Guia de Bolso Sustentavel</string>
    <string name="CR_Tittle">Curiosidades</string>
    <string name="DS_Tittle">Dicas Sustentáveis</string>
    <string name="CS_Tittle">Coleta Seletiva</string>
    <string name="CR">Curiosidades</string>
    <string name="CS">Coleta Seletiva</string>
    <string name="DS">Dicas de Sustentabilidade</string>
    <string name="CR_mais10Curiosidades">+10 Curiosidades</string>
    <string name="CR_outras10Curiosidades">Outras 10 Curiosidades</string>
    <string name="DS_TextView">+10 Dicas</string>
    <string name="DS2_TextView">Outras 10 Dicas</string>
    <string name="DS3_TextView">Voltar</string>
    <string name="CS_Papel">Papel</string>
    <string name="CS_Plastico">Plástico</string>
    <string name="CS_Vidro">Vidro</string>
    <string name="CS_Metal">Metal</string>
    <string name="CS_Organico">Orgânico</string>
    <string name="informacao">Você Sabia? 5 de junho é dia da Reciclagem.</string>
    <string name="textoApresentacao">O dia a dia das pessoas anda muito corrido. A falta de tempo faz com que pais e filhos tenham dificuldade de ficarem juntos. Correr atrás de uma condição melhor de vida nos faz trabalhar mais e reduz o tempo de convivência. Mas quando todos se juntam para praticar ações sustentáveis, a convivência aumenta. Todos se unem para ajudar o planeta!</string>
    <string-array name="curiosidadaArray">
        <item>Se 1 milhão de pessoas usarem o verso do papel para escrever e desenhar, a cada mês será preservada uma área de floresta equivalente a 18 campos de futebol.</item>
        <item>Quando você aciona a descarga para se livrar de uma bituca de cigarro, 12 litros de água tratada descem pelo ralo. Se 1 milhão de pessoas perdessem esse hábito, seriam economizados 360 milhões de litros de água. Esse volume equivale à água que cai nas cataratas do Iguaçú a cada 4 minutos.</item>
        <item>Os médicos recomendam que você beba pelo menos 2 litros de água por dia. Uma única goteira pode desperdiçar 150 litros diários, ou seja, água suficiente para matar a sua sede por mais de 2 meses.</item>
        <item>A grande vantagem de reciclar o vidro é que não há nenhum desperdício durante o processo. Outra vantagem é que, ao se utilizar os cacos, o tempo de fusão do material cai, reduzindo a quantidade de energia consumida em até 65 porcento. O Brasil só recicla 25 porcento do vidro que consome.</item>
        <item>As milhões de baterias e pilhas vendidas todo ano no Brasil contém metais pesados tóxicos, que podem contaminar o solo e a água. Em contato com seres humanos, atacam o cérebro, os rins e os pulmões. Quando for descartá-las, procure um posto de coleta especial.</item>
    </string-array>
    <string-array name="dicasSustentaveisArray">
        <item>Na hora da compra, avalie se realmente precisa do produto: Além de economizar, irá gerar menos resíduos.</item>
        <item>Prefira comprar em lojas com praticas socioambientais: Adquire produtos que irão retornar com práticas que contribuem para um planeta melhor; fortalece a sustentabilidade como mercado viável. </item>
        <item>Elimine vazamentos: Evita o desperdício de água e reduz o valor da conta de água no fim do mês. </item>
        <item>Faça a captação e o aproveitamento da água da chuva: Reduz o uso de água potável em manutenção; contribui para a redução dos custos públicos para tratamento e distribuição da água; diminui o custo da fatura com água.</item>
        <item>Não deixe aparelhos eletroeletrônicos em standy by: Economiza em média 12% do consumo doméstico de energia elétrica.</item>
        <item>Instale painéis fotovoltaicos : Painéis de energia solar economiza nas despesas mensais com energia elétrica.</item>
        <item>Mantenha as fiações elétricas em bom estado: Evita fuga de energia por meio de fios danificados; evita possíveis acidentes.</item>
        <item>Substitua lâmpadas incandescentes por lâmpadas econômicas: Economiza em média 60% no consumo; evita a emissão de possivelmente 136kg de gás carbônico por ano; diminui o número de substituições, pois a fluorescente tem maior vida útil.</item>
        <item>Faça separação do seu lixo: Possibilita a reciclagem de materiais; evita a degradação do meio ambiente, economizando matérias-primas para fabricação de novos produtos; auxilia o fortalecimento econômico de cooperativas de reciclagem, contribuindo para melhoria de vida dos catadores; contribui para o aumento de vida útil dos aterros sanitários, evitando que produtos recicláveis sejam destinados incorretamente.</item>
        <item>Diminua o uso de descartáveis: Economiza no custo dessas despesas; evita geração de resíduos.</item>

    </string-array>
    <string-array name="dicasSustentavei2Array">
        <item>Menos embalagem é mais competitivo e sustentável: Menos embalagens e mais refis são recomendáveis e preferidos pelos consumidores conscientes. Embalagens recicláveis são cada vez mais competitivas. Evite utilizar materiais em excesso ao embrulhar produtos. Atualmente a maior parte do lixo urbano é composta por embalagens.</item>
        <item>Use madeira de reflorestamento ou certificadas: Prefira madeira de reflorestamento ou certificada para usar em sua empresa. Verifique a procedência de todo material feito de madeira e adquira produtos preferencialmente com selo de certificação FSC.</item>
        <item>Energia solar é muito mais econômica: Um aquecedor solar gasta R$ 0,0035 por litro de água aquecida, enquanto um aquecedor de gás R$ 0,64, e um chuveiro elétrico R$ 0,89. Reduza custos de sua empresa, utilizando sistemas de aquecimento solar para alimentar chuveiros e torneiras de água quente.</item>
        <item>Faça parceria com cooperativas de recicladores e doe seus resíduos recicláveis: Torne-se parceiro dessas entidades em sua cidade e doe os resíduos gerados no dia a dia para elas. Dessa forma estará reduzindo o volume de resíduos na coleta, lixões e aterros sanitários e, ainda, vai apoiar a atividade produtiva e remunerada dos recicladores de resíduos, que fornecem tais materiais para as indústrias de reciclagem.</item>
        <item>Diminua custos de limpeza, adotando produtos biodegradáveis e receitas caseiras: Os custos de limpeza podem ser reduzidos ao optar por produtos biodegradáveis e receitas caseiras. Dessa forma, seu empreendimento também estará participando do esforço coletivo de diminuir a poluição de rios e do impacto ambiental.</item>
        <item>Adquira produtos locais: Evite a compra de produtos de fora de sua cidade para diminuir a emissão de gás carbônico (CO²) no transporte deles. Ir à feira livre é uma ação sustentável. Estimule a economia local e a geração de empregos e postos de trabalho em sua cidade ao comprar produtos locais.</item>
        <item>Envolva e capacite todos os colaboradores rumo à sustentabilidade: Envolver e capacitar todos os colaboradores na nova postura do mercado sustentável. Os resultados da redução de consumo de energia, água, transporte, embalagens, entre outros, só serão alcançados a partir da mudança comportamental e adoção de novas atitudes.</item>
        <item>Prefira tecnologias limpas e de baixo consumo energético: Ao adquirir equipamentos e tecnologia para seu negócio dê preferência para aqueles que poluem menos e reduzem o consumo de energia. Isso é bom para o meio ambiente e seu bolso.</item>
        <item>Instale torneiras de baixo consumo de água: Torneiras de baixo consumo de água ou com fechamento automático já se tornaram comuns no mercado. </item>
        <item>Use a internet e o telefone para reduzir o consumo de CO²: A tecnologia como a internet e o telefone são aliados das empresas para a redução de custos e de emissão de CO² (carbono). A internet é ótima ferramenta de comunicação para capacitar ou reunir funcionários sem necessidade de gastos com deslocamentos (avião, hospedagem e diárias). Cursos de educação à distância, teleconferências, videoconferências ou reuniões remotas por telefone podem ser feitas via internet.</item>
    </string-array>
    <string-array name="dicasSustentavei3Array">
        <item>Prefira equipamentos com o Selo Procel: O selo Procel de Economia de Energia é a principal referência para consumidores e empresários, na hora da comprar equipamentos e eletrodomésticos. Ele aponta os níveis de eficiência energética, de acordo com cada categoria, garantindo economia na sua conta de energia. O objetivo do programa é incentivar a fabricação e comercialização de produtos mais eficazes, visando o desenvolvimento tecnológico nacional e a preservação do meio ambiente.</item>
        <item>Não descarte pilhas e baterias em lixo comum: Pilhas e baterias contêm metais pesados e tóxicos como cádmio, chumbo e mercúrio, que contaminam o solo e a água. Ao descartar pilhas e baterias, procure um posto de coleta especial.</item>
        <item>Troque as antigas descargas com válvulas por descargas acoplados com caixa: As antigas descargas de sanitários com válvulas gastam entre 10 a 30 litros de água, quando acionadas. Já as descargas acopladas com acionamento duplo consomem apenas 3 e 6 litros de água a cada vez que são acionadas.</item>
        <item>Reduza o consumo de água: Uma torneira pingando pode desperdiçar cerca de 46 litros/dia, o que equivale a 1, 4 mil litros/mês e 16,5 mil litros/ano. Geralmente o alto consumo de água está relacionado com vazamentos em conexões, reservatórios, tubulações e outros equipamentos.</item>
        <item>Consumidor consciente escolhe embalagens reutilizáveis: Alimentos fora de bandejas de isopor, copos de vidro, sacolas, prefira produtos que podem ser usados, lavados e reutilizados, ao invés de serem descartados, após a utilização. Essa é uma tendência em curso no mercado em geral, pois reduz a quantidade de lixo na coleta e aterros.</item>
        <item>Use de maneira eficiente o ar condicionado: Para que o ar condicionado funcione com maior eficiência, não deixe o equipamento em lugares quentes ou sob a incidência do sol. Faça limpeza dos filtros regularmente. Ao ligar o aparelho feche as portas e janelas e, antes de comprá-los, verifique se o tamanho do local, onde será instalado, para ter certeza de que está de acordo.</item>
        <item>Invista em compras e fornecedores sustentáveis: Fazer compras sustentáveis ou contratar fornecedores comprometidos com a sustentabilidade significa adquirir insumos, produtos e serviços que provocam menos impacto ambiental e podem gerar economia, ao longo dos processos. A compra sustentável nem sempre corresponde a produtos mais baratos; é preciso considerar o ciclo de vida, o consumo de energia e as radiações emitidas no processo produtivo do insumo, produto ou serviço, que estão sendo adquiridos.</item>
        <item>Reduza o uso de recursos naturais e de substâncias tóxicas: A redução de recursos naturais e de substâncias tóxicas nos produtos vai contribuir para a qualidade de vida.</item>
        <item>Troque sacolas plásticas por sacolas retornáveis: Sacolas retornáveis são de extrema importância para a redução de resíduos, principalmente para minimizar a quantidade de plástico descartado na natureza. Reduza também o uso das sacolas de papel, cuja fabricação envolve o corte de árvores e muita água.</item>
        <item>Mantenha as lâmpadas ligadas apenas quando necessário: Um modo de redução do consumo de energia em iluminação, mais barato e fácil é desligar as lâmpadas sempre ao sair de um ambiente ou quando não for necessário o uso delas. Sempre que possível aproveite a iluminação natural, abrindo as persianas, janelas, etc.  Com essas atitudes estima-se a economia de 10 a 15% do consumo original.</item>
    </string-array>
    <string name="segredo">Aqui estão algumas dicas.</string>
    <string name="segredo2">Então você quer mais dicas... ok.</string>
    <string name="segredo3">E... infelizmente essas são as ultimas.</string>
</resources>