<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CS_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backGroundColor"
        android:orientation="vertical"
        tools:context="com.androidaccelarate.guiadebolsosustentavel.ColetaSeletivaActivity">

        <TextView
            android:id="@+id/CS_Tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CS_Tittle"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/papel_color"
            android:padding="20dp"
            android:text="@string/CS_Papel"
            android:textColor="@android:color/black"
            android:textSize="@dimen/CS_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/plastico_color"
            android:padding="20dp"
            android:text="@string/CS_Plastico"
            android:textColor="@android:color/black"
            android:textSize="@dimen/CS_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/vidro_color"
            android:padding="20dp"
            android:text="@string/CS_Vidro"
            android:textColor="@android:color/black"
            android:textSize="@dimen/CS_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/metal_color"
            android:padding="20dp"
            android:text="@string/CS_Metal"
            android:textColor="@android:color/black"
            android:textSize="@dimen/CS_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/organico_color"
            android:padding="20dp"
            android:text="@string/CS_Organico"
            android:textColor="@android:color/black"
            android:textSize="@dimen/CS_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/nao_reciclavel_color"
            android:padding="20dp"
            android:text="@string/CS_NaoReciclavel"
            android:textColor="@android:color/black"
            android:textSize="@dimen/CS_text_size" />

    </LinearLayout>

</ScrollView>