<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundColor"
    android:orientation="vertical"
    tools:context="com.androidaccelarate.guiadebolsosustentavel.MainActivity">

    <RelativeLayout
        android:id="@+id/main_high"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/main_high_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="25dp"
            android:text="@string/informacao"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <Button
            android:id="@+id/main_high_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/DS"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/main_medium_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="6"
        android:background="@color/backgroundTextColor"
        android:gravity="center"
        android:text="@string/textoApresentacao"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp">

    </TextView>

    <RelativeLayout
        android:id="@+id/main_low"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/main_low_left_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:text="@string/CS"
            android:textColor="@android:color/white"
            android:textSize="15sp">

        </Button>

        <Button
            android:id="@+id/main_low_right_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/main_low_left_button"
            android:layout_toRightOf="@+id/main_low_left_button"
            android:orientation="horizontal"
            android:padding="10dp"
            android:text="@string/CR"
            android:textColor="@android:color/white"
            android:textSize="15sp">

        </Button>

    </RelativeLayout>


</LinearLayout>
